# cli-rs

./: .gitignore  Cargo.toml  README.md  build.rs  cargo-generate.toml  cbindgen.toml  justfile
.cargo/: config.toml
src/: main.rs
src/appCfg/: cmd.rs  help.html  mod.rs
src/commands/: info.rs  mod.rs  test.rs  test0.rs  test1.rs  test2.rs  test3.rs
src/ffiToolbox/: cbSystem.rs  ffiTypes.rs  mod.rs
src/toolbox/: debugJson.rs  display.rs  fileOps.rs  git.rs  loggr.rs  mod.rs
support/: cbindgen.toml  commands.ps1  cppbindgen.toml
support/dox/: powershell_cheatsheet.md
