[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
description = "{{description}}"
authors = ["Yoofie <yoofie@gmail.com>"]
include = ["src/**/*", "LICENSE-*", "*.md"]
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
clap = "*"
once_cell = "*"
flume = "*"
nanoid = "0.4.0"
static-toml = "1.0.1" # https://github.com/cptpiepmatz/static-toml
include_dir = "0.7.3" # https://github.com/Michael-F-Bryan/include_dir

[build-dependencies]
cbindgen = "*"

[profile.release]
strip = true
panic = "abort"
lto = true

#[lib]
#crate-type = ["staticlib", "cdylib"]

