[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
description = "{{description}}"
authors = ["Yoofie <yoofie@gmail.com>"]
include = ["src/**/*", "LICENSE-*", "*.md"]
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
clap = "4.5.4"
once_cell = "*"
flume = "*"
nanoid = "0.4.0"
itertools = "0.12.1"
chrono = "0.4.34"
static-toml = "1.0.1" # https://github.com/cptpiepmatz/static-toml
include_dir = "0.7.3" # https://github.com/Michael-F-Bryan/include_dir
faster-hex = "0.9.0" # https://github.com/nervosnetwork/faster-hex
byteorder = "1.5.0"
opener = "0.7.0"

[build-dependencies]
cbindgen = "*"

[profile.release]
strip = true
panic = "abort"
lto = true

#[lib]
#crate-type = ["staticlib", "cdylib"]

